service-backup.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-display-overview
spec:
  selector:
    name: deployment-overview
  ports:
    - port: 80
      targetPort: 8080
      #nodePort: 30007
      protocol: TCP
  #type: NodePort
