servicelb.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-display-overview-lb
spec:
  selector:
    app.kubernetes.io/name: deployment-overview
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8080
  type: LoadBalancer
