ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "micro-ingress-gloresoft"
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    name: spring-docker-kuber
spec:
  rules:
    - http:
        paths:
          - path: /workOrders
            pathType: Prefix
            backend:
              service:
                name: "overviewservice"
                port:
                  number: 8082
          - path: /workOrders
            pathType: Prefix
            backend:
              service:
                name: "updateservice"
                port:
                  number: 8084
          - path: /histories
            pathType: Prefix
            backend:
              service:
                name: "historyservice"
                port:
                  number: 8083
